# fortnet-python

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/fortformat/: __init__.py  fnetdata.py  fnetout.py  fortformat.py
test/: common.py  test_fnetdata.py  test_fnetout.py
test/references/Fnetdata/: _cgeometries.hdf5  _cgeometries_atomictargets.hdf5  _cgeometries_atomictargets_atomicweights.hdf5  _cgeometries_atomictargets_batomicweights.hdf5  _cgeometries_atomictargets_extfeatures.hdf5  _cgeometries_atomictargets_weights.hdf5  _cgeometries_extfeatures.hdf5  _cgeometries_globaltargets.hdf5  _cgeometries_globaltargets_atomictargets.hdf5  _cgeometries_globaltargets_atomictargets_atomicweights.hdf5  _cgeometries_globaltargets_atomictargets_batomicweights.hdf5  _cgeometries_globaltargets_atomictargets_extfeatures.hdf5  _cgeometries_globaltargets_atomictargets_weights.hdf5  _cgeometries_globaltargets_atomicweights.hdf5  _cgeometries_globaltargets_batomicweights.hdf5  _cgeometries_globaltargets_extfeatures.hdf5  _cgeometries_globaltargets_weights.hdf5  _cgeometries_weights.hdf5  _cluster_geometries.hdf5  _csgeometries.hdf5  _extfeatures.hdf5  _sgeometries_atomictargets.hdf5  _sgeometries_atomictargets_atomicweights.hdf5  _sgeometries_atomictargets_batomicweights.hdf5  _sgeometries_atomictargets_extfeatures.hdf5  _sgeometries_atomictargets_weights.hdf5  _sgeometries_extfeatures.hdf5  _sgeometries_globaltargets.hdf5  _sgeometries_globaltargets_atomictargets.hdf5  _sgeometries_globaltargets_atomictargets_atomicweights.hdf5  _sgeometries_globaltargets_atomictargets_batomicweights.hdf5  _sgeometries_globaltargets_atomictargets_extfeatures.hdf5  _sgeometries_globaltargets_atomictargets_weights.hdf5  _sgeometries_globaltargets_atomicweights.hdf5  _sgeometries_globaltargets_batomicweights.hdf5  _sgeometries_globaltargets_extfeatures.hdf5  _sgeometries_globaltargets_weights.hdf5
test/references/Fnetout/: _predict_atomic.hdf5  _predict_global.hdf5  _predict_global_multiforces.hdf5  _predict_global_singleforces.hdf5  _validate_atomic.hdf5  _validate_atomic_global.hdf5  _validate_global.hdf5
