[metadata]
name = fortnet-python
version = 0.4
author = T. W. van der Heide
author_email = vanderhe@uni-bremen.de
url = https://github.com/vanderhe/fortnet-python
description = Python Tools for the Fortnet Software Package
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    = src
packages = fortformat
install_requires =
    wheel
    setuptools
    pytest
    numpy
    h5py
    ase

[options.packages.find]
where = src
